--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-    
+    <header class="head">
+        <a href="#" class="logo">Car.</a>
+
+        <nav class="nav">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">review</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="continer"></div>
 
 </body>
 
