--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                 <li><a href="#">contact</a></li>
             </ul>
         </nav>
+        <div class="social-meida">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+            <a href="#"><i class="bx bxl-youtube"></i></a>
+        </div>
     </header>
 
     <div class="continer"></div>
