--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <nav class="nav">
             <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="#" class="active">home</a></li>
                 <li><a href="#">about</a></li>
                 <li><a href="#">services</a></li>
                 <li><a href="#">review</a></li>
