--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         </div>
     </header>
 
-    <div class="home">
-        <h1 class="h1">Car Dealing Experiance</h1>
-        <h3 class="h3">Redefined!</h3>
-        <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, dolor error mollitia nisi sapiente vitae deleniti quibusdam aliquam laborum repudiandae at veritatis et cupiditate fugiat non possimus doloribus eum architecto.</p>
-        <a href="#" class="btn">Explore car</a>
-    </div>
+    <section class="home">
+        <div class="home-content">
+            <h1 class="h1">Car Dealing Experiance</h1>
+            <h3 class="h3">Redefined!</h3>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, dolor error mollitia nisi sapiente vitae deleniti quibusdam aliquam laborum repudiandae at veritatis et cupiditate fugiat non possimus doloribus eum architecto.</p>
+            <a href="#" class="btn">Explore car</a>
+        </div>
+    </section>
 
 </body>
-
 </html>
