--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, dolor error mollitia nisi sapiente vitae deleniti quibusdam aliquam laborum repudiandae at veritatis et cupiditate fugiat non possimus doloribus eum architecto.</p>
             <a href="#" class="btn">Explore car</a>
         </div>
+        <div class="home-img">
+            <div class="box1">
+                <img src="car.png" alt="loding.......">
+            </div>
+        </div>
+        <div class="box2"></div>
     </section>
 
 </body>
