--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <nav class="nav">
             <ul>
-                <li><a href="#" class="active">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">review</a></li>
-                <li><a href="#">contact</a></li>
+                <li><a href="#" class="active" style="--i:1">home</a></li>
+                <li><a href="#" style="--i:2">about</a></li>
+                <li><a href="#" style="--i:3">services</a></li>
+                <li><a href="#" style="--i:4">review</a></li>
+                <li><a href="#" style="--i:5">contact</a></li>
             </ul>
         </nav>
         <div class="social-meida">
