--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </ul>
         </nav>
         <div class="social-meida">
-            <a href="https://www.facebook.com/MasricozzamanAnas" target="_blank"><i class='bx bxl-facebook'></i></a>
-            <a href="https://www.instagram.com/masricozzamananas/" target="_blank"><i class="bx bxl-instagram"></i></a>
-            <a href="https://twitter.com/marketer_anas" target="_blank"><i class="bx bxl-twitter"></i></a>
-            <a href="https://www.threads.net/@masricozzamananas" target="_blank"><i class="bx bxl-youtube"></i></a>
+            <a href="https://www.facebook.com/MasricozzamanAnas" target="_blank" style="--i:1"><i class='bx bxl-facebook'></i></a>
+            <a href="https://www.instagram.com/masricozzamananas/" target="_blank" style="--i:2"><i class="bx bxl-instagram"></i></a>
+            <a href="https://twitter.com/marketer_anas" target="_blank" style="--i:3"><i class="bx bxl-twitter"></i></a>
+            <a href="https://www.threads.net/@masricozzamananas" target="_blank" style="--i:4"><i class="bx bxl-youtube"></i></a>
         </div>
     </header>
 
